[metadata]
name = wolkenbrot
author = Oz N Tiram
author-email = oz.tiram@gmail.com
summary = Create and Manage AWS EC2 AMI cloud images
description-file = README.md
home-page = https://github.com/oz123/wolkenbrot
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[files]
packages =
    wolkenbrot

[entry_points]
console_scripts =
    wolkenbrot = wolkenbrot:main

[extras]
dev =
    coverage
    pytest
    moto
    pytest-cov

openstack =
    openstacksdk

[tool:pytest]
addopts = -vv
python_files = tests/*.py

